SearchBar: Correct input field height
The implementation of the usePlacesAutocomplete component caused the heights of the term and location fields to be misaligned. Adjusted the CSS to make them the same again.

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -79,6 +79,7 @@
 
 #term, #location {
   margin: 10px;
+  height: 17px;
 }
 
 @media only screen and (max-width: 560px) {
